--- a/index.html
+++ b/index.html
@@ -632,13 +632,9 @@
     			
     			<li>
                 <span class="text-uppercase">Linkedin</span>
-                <a href="https://www.linkedin.com/in/yijung810124/" class="social-item"><span class="icon-linkedin2"></span></a>
+                <a href="https://www.linkedin.com/in/yi-jung-chiang/" class="social-item"><span class="icon-linkedin2"></span></a>
               </li>
-              <li>
-                <span class="text-uppercase">Address</span>
-                155 NW Kings Blvd unit228 <br>
-                Corvallis, Oregon 97330  
-              </li>
+             
             </ul>
           </div>
           </div>
